# uct-sharc-sea-ice

./: README.md  simple.sh
c++_pcd_extractor/: CMakeLists.txt  readme.md
c++_pcd_extractor/launch/: create_launch_files.py  parse.pcd.xml  parse.rgb.xml  parse_rgb_launch.py
c++_pcd_extractor/src/: ros2bag_file_parser_opp.cpp
launch_ws/launch/: Untitled.ipynb  dual_launch.py  fin2_launch.py  fin_launch.py  gnm.py  livox.rviz  readme.md  realsense.rviz  temp.py
launch_ws/ros2bag_file_parser/: README.MD
launch_ws/ros2bag_file_parser/include/ros2bag_file_parser/: ros2bag_file_parser.hpp
launch_ws/ros2bag_file_parser/launch/: parse.lidar.pcd.xml  parse.pcd.xml  parse.rgb.xml  parse.thermal.xml  readme.md
launch_ws/ros2bag_file_parser/src/: ros2bag_file_parser_node.cpp  ros2bag_file_parser_node_opp.cpp  ros2bag_file_parser_opp.cpp
project_info/: readme.md
python_pcd_extractor/: README.md  extract_livox_data.py
python_pcd_extractor/pypcd/pypcd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
